test/files/continuations-neg/infer2.check
infer2.scala:14: error: illegal answer type modification: scala.util.continuations.cpsParam[String,Int] andThen scala.util.continuations.cpsParam[String,Int]
    test { sym(); sym() }    
         ^
one error found
